add sections to index

--- a/index.html
+++ b/index.html
@@ -23,6 +23,46 @@
         <p>Hi! I'm Khalid Tewfik, a passionate software engineer dedicated to building creative and efficient solutions.</p>
     </section>
 
+    <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+        <li>Front-End Development: HTML, CSS, JavaScript</li>
+        <li>Back-End Development: Node.js, Express</li>
+        <li>Database Management: MongoDB, SQL</li>
+        <li>Version Control: Git, GitHub</li>
+    </ul>
+</section>
+
+
+<section id="featured-projects">
+    <h2>Featured Projects</h2>
+    <ul>
+        <li><a href="https://github.com/KhalidTewfik/project1" target="_blank">Project 1: Responsive Web Design</a></li>
+        <li><a href="https://github.com/KhalidTewfik/project2" target="_blank">Project 2: E-commerce Website</a></li>
+    </ul>
+</section>
+
+
+<section id="about">
+    <h2>About Me</h2>
+    <p>I am a software engineer with a focus on creating efficient, high-quality web solutions. I thrive on tackling complex problems and delivering creative, scalable solutions. My experience includes building projects from scratch and working collaboratively in teams to achieve ambitious goals.</p>
+    <a href="about.html">Learn More</a>
+</section>
+
+
+<section id="contact">
+    <h2>Get in Touch</h2>
+    <p>If you’d like to collaborate or learn more, feel free to reach out!</p>
+    <p>Email: <a href="mailto:khalidtewfiq151@gmail.com">khalidtewfiq151@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/khalid-tewfiq/" target="_blank">Connect with me</a></p>
+</section>
+
+
+<footer>
+    <p>&copy; 2024 Khalid Tewfik | <a href="https://github.com/811khalid" target="_blank">GitHub</a></p>
+</footer>
+
+
     <footer>
         <p>&copy; 2024 Khalid Tewfik</p>
     </footer>
